# tag-camera

./: .gitignore  README.md  calibrate.py  calibration_test.py  camera_calibration.npz  capture_calibration_images.py  pyproject.toml  test_tag_detect.py
scripts/: calibrate.py  calibration_test.py  capture_calibration_images.py  test_camera_interactive.py  test_locate_tag.py  test_tag_detect.py
src/robotiq_tools/: __init__.py  camera.py  config.py
src/tag_camera/: __init__.py  camera.py  config.py
