[project]
name = "tag-camera"
version = "0.1.0"
description = "AprilTag detection and pose estimation with USB cameras"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "opencv-python>=5.0.0.93",
    "pupil-apriltags>=1.0.4.post11",
    "scipy>=1.15",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tag_camera"]

[tool.ty.rules]
all = "warn"

[tool.ty.environment]
python = "./.venv"
